--- a/09-despliegues/package.json
+++ b/09-despliegues/package.json
@@ -19,6 +19,7 @@
 		"eject": "react-scripts eject",
 		"fake-api": "json-server --watch src/api/db.json --port 5000"
 	},
+	"homepage": "./",
 	"eslintConfig": {
 		"extends": [
 			"react-app",
